# tasty-expect

./: .gitignore  CHANGELOG.md  README.md  cabal.project.local  hspec-expect.cabal  tasty-expect.cabal
src/Test/Hspec/: Expect.hs
src/Test/Hspec/Expect/: TH.hs
src/Test/Tasty/: Expect.hs
src/Test/Tasty/Expect/: Internal.hs
test/: ExpectSpec.hs  Main.hs
test2/: ExpectSpec.hs  Main.hs
