cabal-version:      3.4
name:               hspec-expect
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Brian Shu
maintainer:         littlebubu.shu@gmail.com
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options: -Wall
    build-depends:
        hspec-core,
        filepath,
        directory,
        process,
        typed-process,
        temporary,
        text,
        bytestring,
        tasty,
        optparse-applicative,
        containers,
    default-language: GHC2021
    default-extensions:
        OverloadedStrings

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    
library
    import:           common
    exposed-modules:
        Test.Tasty.Expect
        Test.Tasty.Expect.Internal
    build-depends:
        base >=4.18.2.0,
        template-haskell,
    hs-source-dirs:   src

test-suite hspec-expect-test
    import:           common, rtsopts
    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
    build-depends:
        base >=4.18.2.0,
        hspec-expect,
        tasty-hunit,
        hspec,
    build-tool-depends: hspec-discover:hspec-discover